# remap

./: CMakeLists.txt  README.md
include/: libimagequant.h  lodepng.h  palette.h
src/: libimagequant.c  palette.c  pam.c  remap.c
test/: CMakeLists.txt
